--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,6 +2,20 @@
 #    path: /
 #    defaults: { _controller: 'App\Controller\DefaultController::index' }
 
-app_user_index:
-  path: /users/
-  controller: App\Controller\UserController::index
+user_show:
+  path: /user/show/{id}
+  controller: App\Controller\UserController::show
+  requirements:
+    id: '\d+'
+
+user_new:
+  path: /user/new
+  controller: App\Controller\UserController::new
+
+user_list:
+  path: /user/list
+  controller: App\Controller\UserController::list
+
+#homepage:
+#  path: /
+#  controller: App\Controller\MainController::index
