--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,6 +1,11 @@
 easy_admin:
+  site_name: 'Copyvore Admin'
+  design:
+    brand_color: '#FD0100'
   entities:
-    # List the entity class name you want to manage
-    #- App\Entity\Product
-    #- App\Entity\Category
-    #- App\Entity\User
+    - App\Entity\User
+    - App\Entity\Order
+    - App\Entity\Reload
+    - App\Entity\ReloadType
+    - App\Entity\CopyType
+    - App\Entity\Admin
