--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,6 +1,7 @@
 framework:
     secret: '%env(APP_SECRET)%'
     default_locale: fr
+    validation: { enabled: true }
     #csrf_protection: ~
     #http_method_override: true
 
