--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -27,6 +27,7 @@ easy_admin:
       list:
         title: 'Liste des %%entity_label%%'
         max_results: 30
+        sort: 'id'
         actions:
           - { name: 'show', icon: 'user', label: 'Voir', title: 'Voir' }
         fields:
@@ -36,13 +37,15 @@ easy_admin:
           - { property: 'phone', label: 'Téléphone' }
       form:
         fields:
-          - { type: 'section', label: 'Informations Utilisateur', icon: 'user', css_class: 'danger' }
+          - { type: 'section', label: 'Informations Utilisateur', icon: 'user' }
           - { property: 'name', label: 'Nom', icon: 'user' }
           - { property: 'surname', label: 'Prénom', icon: 'user' }
+          - { type: 'divider' }
           - { property: 'email', label: 'E-mail', type: 'email' }
           - { property: 'password', label: 'Mot de passe', type: 'password' }
-          - { type: 'section', label: 'Informations additionnelles', icon: 'home', css_class: 'danger' }
+          - { type: 'section', label: 'Informations additionnelles', icon: 'home' }
           - { property: 'phone', label: 'Téléphone' }
+          - { type: 'divider' }
           - { property: 'streetNumber', label: 'Numéro de rue' }
           - { property: 'street', label: 'Rue' }
           - { property: 'city', label: 'Ville' }
@@ -68,15 +71,12 @@ easy_admin:
           - { property: 'createdAt', label: 'Date de commande' }
           - { property: 'number', label: 'Nombre de copies' }
           - { property: 'label', label: 'Libellé' }
-      search:
-        sort: 'createdAt'
-        max_results: 30
       form:
         fields:
-          - { type: 'group', css_class: 'col-sm-6', label: 'Informations humaines' }
+          - { type: 'group', icon: 'user', css_class: 'col-sm-6', label: 'Informations humaines' }
           - { property: 'user', label: 'Utilisateur', icon: 'user' }
           - { property: 'admin', label: 'Admin', icon: 'user' }
-          - { type: 'group', css_class: 'col-sm-6', label: 'Informations commande' }
+          - { type: 'group', icon: 'print', css_class: 'col-sm-6', label: 'Informations commande' }
           - { property: 'copyType', label: 'Type de copie' }
           - { property: 'number', label: 'Nombre de copies' }
           - { property: 'label', label: 'Libellé' }
@@ -97,14 +97,13 @@ easy_admin:
           - { property: 'user', label: 'Utilisateur' }
           - { property: 'admin', label: 'Admin' }
           - { property: 'reloadType', label: 'Type de recharge' }
+          - { property: 'amount', label: 'Montant', css_class: 'money-display' }
           - { property: 'createdAt', label: 'Date de création' }
-      search:
-        sort: 'createdAt'
-        max_results: 30
       form:
         fields:
           - { property: 'user', label: 'Utilisateur', icon: 'user' }
           - { property: 'admin', label: 'Admin', icon: 'user' }
+          - { type: 'divider' }
           - { property: 'reloadType', label: 'Type de recharge' }
 #          - { property: 'createdAt', label: 'Date de création' }
       new:
@@ -118,6 +117,7 @@ easy_admin:
       list:
         title: 'Liste des %%entity_label%%'
         max_results: 30
+        sort: 'id'
         fields:
           - { property: 'number', label: 'Nombre' }
           - { property: 'unitPrice', label: 'Prix unitaire', css_class: 'money-display' }
@@ -130,8 +130,6 @@ easy_admin:
           - { property: 'unitPrice', label: 'Prix unitaire', type: 'money', type_options: { currency: 'EUR' } }
           - { property: 'copyType', label: 'Type de copie' }
           - { property: 'isAvailable', label: 'Active' }
-      search:
-        dql_filter: 'entity.isAvailable = true'
       new:
         title: 'Créer un type de recharge'
       edit:
@@ -143,6 +141,7 @@ easy_admin:
       list:
         title: 'Liste des %%entity_label%%'
         max_results: 30
+        sort: 'id'
         fields:
           - { property: 'type', label: 'Type' }
       new:
@@ -156,6 +155,7 @@ easy_admin:
       list:
         title: 'Liste des %%entity_label%%'
         max_results: 30
+        sort: 'id'
         fields:
           - { property: 'login', label: 'Login' }
       form:
