--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -2,13 +2,13 @@ framework:
     secret: '%env(APP_SECRET)%'
     default_locale: fr
     validation: { enabled: true }
-    #csrf_protection: ~
+    csrf_protection: { enabled: true }
+
     #http_method_override: true
 
     # uncomment this entire section to enable sessions
-    #session:
-    #    # With this config, PHP's native session handling is used
-    #    handler_id: ~
+    session:
+        handler_id: ~
 
     #esi: ~
     #fragments: ~
