--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,43 @@
 security:
-    # https://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        user_db_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+        admin_db_provider:
+            entity:
+                class: App\Entity\Admin
+                property: login
+        users_chain_provider:
+            chain:
+                providers: [ user_db_provider, admin_db_provider ]
+
+    encoders:
+        App\Entity\User:
+            algorithm: bcrypt
+        App\Entity\Admin:
+            algorithm: bcrypt
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: ~
+            provider: users_chain_provider
+            logout:
+                path: logout
+                target: main
+            form_login:
+                login_path: login
+                check_path: login
+                default_target_path: account
+                always_use_default_target_path: true
+                post_only: true
+                remember_me: true
+                csrf_token_generator: security.csrf.token_manager
 
-            # activate different ways to authenticate
-
-            # http_basic: ~
-            # https://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # https://symfony.com/doc/current/cookbook/security/form_login_setup.html
+    access_control:
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/account, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/admin, roles: ROLE_ADMIN }
