--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,8 +36,12 @@ security:
                 post_only: true
                 remember_me: true
                 csrf_token_generator: security.csrf.token_manager
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path: /
 
     access_control:
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/account, roles: [ROLE_USER, ROLE_ADMIN] }
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/login/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/account/, roles: [ROLE_USER, ROLE_ADMIN] }
+        - { path: ^/admin/, roles: ROLE_ADMIN }
